[tool.poetry]
name = "mdual"
version = "0.1.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
# readme = "README.md"
# packages = [{ include = "mdual" }]

[tool.poetry.dependencies]
python = ">=3.8, <=3.9"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.6, <1.7.3"
matplotlib = "^3.4"
tqdm = "^4.65.0"
typing-extensions = "^4.6.3"


[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^23.3.0"
ipython = ">=7.23.1"
ipykernel = "^6.25.1"
snakeviz = "^2.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
