[tool.poetry]
name = "dualitic"
version = "0.2.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"
packages = [{ include = "dualitic" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16"
scipy = ">=1.6"
matplotlib = ">=3.6"
tqdm = "^4.66.1"
typing-extensions = "^4.6.3"


[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = {extras = ["jupyter"], version = "^23.9.1"}
ipython = ">=7.23.1"
ipykernel = "^6.25.1"
snakeviz = "^2.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
